2004-03-26  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tkImgPPM.c (ReadPPMStringHeader): Code to read PPM/PGM data
	(StringReadPPM, StringMatchPPM): from strings/bytearrays. [FRQ 540375]
	* generic/tkImgPPM.c (StringWritePPM): New function to support
	converting of images to PPM strings.  Other direction not yet
	done.  Rest of file converted to use new image API.
	* generic/tkImgPhoto.c (ImgPhotoCmd): Restored support for the
	stringWriteProc of old photo formats.  [Bug 923555]

2004-03-20  Jim Ingham  <jingham@apple.com>

	* macosx/tkMacOSXSubwindows.c (GenerateConfigureNotify): New
	function.
	(XMoveWindow): Generate configure notify events for child
	widgets on move.
	(XMoveResizeWindow): Ditto.
	
2004-03-17  Jim Ingham  <jingham@apple.com>

	* macosx/tkMacOSXHLEvents.c (ApplicationCarbonEventsHandler): New 
	function.
	(tkMacOSXInitAppleEvents): Init the Application Event handler as
	well.
	* macosx/tkMacOSXKeyEvent.c (TkMacOSXProcessKeyboardEvent): Grab
	the Command-H & Command-Shift-H keys and use them for Hide and
	Hide Others before passing keystrokes on to the generic keyboard
	event processing.  There isn't any other good way to get the
	Hide command to work, and the Apple HIG explicitly reserves them.
	* macosx/tkMacOSXMenus.c (TkMacOSXInitMenus): Stop putting a Quit
	menu item in the File menu.  It doesn't belong there.
	
2004-03-01  Don Porter  <dgp@users.sourceforge.net>

	*** 8.4.6 TAGGED FOR RELEASE ***

        * unix/tcl.m4 (SC_CONFIG_CFLAGS):       Allow 64-bit enabling on
        IRIX64-6.5* systems.  [Bug 218561]
        * unix/configure:       autoconf-2.13

2004-02-23  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXDraw.c:
	* macosx/tkMacOSXXStubs.c:
	* xlib/ximage.c: fixed MacOSX XGetImage/XPutImage and related 
	functions to deal properly with XImages copied from screen.
	* generic/tkCanvPs.c (TkImageGetColor): MacOSX fix.
	* generic/tkImgPhoto.c (ImgPhotoDisplay): enabled alpha blending